# jasmine

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  README.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
cmake/: FindSDL2.cmake  FindSDL2_gfx.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_net.cmake  FindSDL2_ttf.cmake
data/maps/: map.0.json  map.0.tmx  map.1.json  map.1.tmx
data/sprites/: icons.tsx  sprites.tsx
lib/audio/: audio.cc  audio.h
lib/characters/: entity.cc  entity.h  inventory.cc  inventory.h  skill.cc  skill.h
lib/core/: common.h  dialogue.cc  dialogue.h  game.cc  game.h  logger.h  math.h  timer.cc  timer.h
lib/graphics/: texture.cc  texture.h  window.cc  window.h
lib/maps/: map.cc  map.h  search.cc  search.h  tile.cc  tile.h
lib/particles/: emitter.cc  emitter.h  particle.h
lib/storage/: storage.cc  storage.h
src/: main.cc
tools/: animations.sh  crop.sh
